tests/syntax-error/function-redefine.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g function-redefine.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: function-redefine.silly:13:1: error: Attempt to define function bar more than once
// CHECK:    13 | FUNCTION bar ( INT16 w )
// CHECK:       | ^

FUNCTION bar ( INT16 w )
{
    PRINT w;
    RETURN;
};

FUNCTION bar ( INT16 w )
{
    RETURN;
};
